some updates using symfony console command

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,12 @@
         }
     },
     "require": {
-        "cboden/Ratchet": "0.3.*",
         "monolog/monolog": "1.9.*@dev",
-        "react/zmq": "0.2.*"
+        "react/zmq": "0.2.*",
+        "symfony/yaml": "2.5.*@dev",
+        "symfony/config": "2.5.*@dev",
+        "symfony/dependency-injection": "2.5.*@dev",
+        "symfony/console": "2.6.*@dev",
+        "cocur/background-process": "@stable"
     }
 }
